"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk-v2/src/info.c
  - Change error message when the client gets a message with a [] text format
    tag that is not valid to make it more obvious what is wrong.  This can
    help determine the error faster if the server inadvertently sends the
    client a message with displayed text that has square brackets around it.
Kevin Bulgrien 2007-09-30

Fix for bug 1800702  - gdk_draw_drawable: assertion `src != NULL' failed.
gtk/gx11.c:  Call sdl_gen_map() or gtk_draw_map() based on displaymode in use.
gtk-v2/src/main.c: Call draw_map() instead of gtk_draw_map().  draw_map()
  will figure out what function (sdl, opengl, gtk) to call do actually
  draw the map.
MSW 2007-09-25

gtk-v2/src/info.c
gtk-v2/src/inventory.c
gtk-v2/src/keys.c
gtk-v2/src/magicmap.c
gtk-v2/src/main.c
gtk-v2/src/menubar.c
gtk-v2/src/metaserver.c
gtk-v2/src/opengl.c
gtk-v2/src/pickup.c
  - Spelling/grammar fixes.
  - Doxygen commenting work.
  - Some indentation adjustments.
  - Reformat block comments to use 79 columns.
  - else block structures changed to comply with project coding standards.
Kevin Bulgrien 2007-09-25

gtk-v2/src/about.c
  - Doxygen commenting work.
gtk-v2/src/config.c
gtk-v2/src/image.c
  - Spelling/grammar fixes.
  - Doxygen commenting work.
  - Some indentation adjustments.
  - Reformat block comments to use 79 columns.
Kevin Bulgrien 2007-09-24

gtk/text.c: Remove call to void_callback() for MSG_TYPE_MONUMENT - if there
  is no code to handle it, no reason to set the callback.  Fixes bug 1759860 -
  gravestone messages go to stdout and not client window.
MSW 2007-09-23

gtk-v2/src/map.c
  - Doxygen commenting work.
  - Spelling fix visable --> visible.
  - Reformat block comments to use 79 columns.
Kevin Bulgrien 2007-09-23

gtk-v2/src/metaserver.c: Modify metaserver_connect_to so it can connect to
  servers running on different ports (eg, localhost:13328).  Gtk1 client